--- a/index.html
+++ b/index.html
@@ -88,40 +88,40 @@
         <section class="section-3">
             <h1 class="section-heading">Gallery</h1>
             <div class="gallery">
-                <a href="" class="gallery-link" title="Order now">
+                <a href="#" class="gallery-link" title="Order now">
                     <img src="images/gallery-img-1.jpg" class="food-img">
                     <h3 class="food-name">Pancakes</h3>
-                    <p class="food-description">a lot of random text i think </p>
+                    <p class="food-description">a lot of random text  </p>
                 </a>
 
-                <a href="" class="gallery-link" title="Order now">
+                <a href="#" class="gallery-link" title="Order now">
                     <img src="images/gallery-img-2.jpg" class="food-img">
                     <h3 class="food-name">Cupcakes</h3>
-                    <p class="food-description">a lot of random text i think </p>
+                    <p class="food-description">a lot of random text  </p>
                 </a>
 
-                <a href="" class="gallery-link" title="Order now">
+                <a href="#" class="gallery-link" title="Order now">
                     <img src="images/gallery-img-3.jpg" class="food-img">
                     <h3 class="food-name">Hummus</h3>
-                    <p class="food-description">a lot of random text i think </p>
+                    <p class="food-description">a lot of random text  </p>
                 </a>
 
-                <a href="" class="gallery-link" title="Order now">
+                <a href="#" class="gallery-link" title="Order now">
                     <img src="images/gallery-img-4.jpg" class="food-img">
                     <h3 class="food-name">Hamburger</h3>
-                    <p class="food-description">a lot of random text i think </p>
+                    <p class="food-description">a lot of random text  </p>
                 </a>
 
-                <a href="" class="gallery-link" title="Order now">
+                <a href="#" class="gallery-link" title="Order now">
                     <img src="images/gallery-img-5.jpg" class="food-img">
                     <h3 class="food-name">Salmon</h3>
-                    <p class="food-description">a lot of random text i think </p>
+                    <p class="food-description">a lot of random text  </p>
                 </a>
 
-                <a href="" class="gallery-link" title="Order now">
+                <a href="#" class="gallery-link" title="Order now">
                     <img src="images/gallery-img-6.jpg" class="food-img">
                     <h3 class="food-name">Vegetables</h3>
-                    <p class="food-description">a lot of random text i think </p>
+                    <p class="food-description">a lot of random text  </p>
                 </a>
             </div>
         </section>
